...
        } else if (isAnimationLike) {
            AnimationLikeImage(size                 = 26.dp,
                               padding              = 0.dp,
                               onFinishAnimation    = { isLike = true })
        } else {
            UnLikeIcon(
                modifier = Modifier.testTag("btnUnLike"),
                size = 26.dp,
                padding = 0.dp,
                onLike = {
                    onLike.invoke()
                    if (animation)
                        isAnimationLike = true
...
    Icon(modifier           = modifier.size(size)
                                      .padding(padding)
                                      .graphicsLayer(scaleX = scale.value,
                                                     scaleY = scale.value)
                                      .nonEffectClickable { onLike.invoke() },
        imageVector         = Icons.Default.Favorite,
        contentDescription  = "like",
        tint                = Color.Red)
}

@Preview(widthDp = 100, heightDp = 100, backgroundColor = 0xFF000000, showBackground = true)
@Composable
fun PreviewLike(){
...
