...
                LocalFeedImageLoader.current(
                    FeedImageLoaderData(
                        url = images[page],
                        contentScale = ContentScale.Crop,
                        height = height,
                        modifier = modifier
                            .testTag("imgReview")
                            .fillMaxSize()
                            .nonEffectClickable(onClick = { onImage.invoke(page); }),
                    )
                )
            }
        }
...
