import androidx.activity.ComponentActivity
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.performClick
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.sarang.torang.R
import com.sarang.torang.compose.feed.FeedItem
import com.sarang.torang.compose.feed.FeedBottomUiState
import com.sarang.torang.compose.feed.FeedTopUiState
import com.sarang.torang.compose.component.data.Comment
import com.sarang.torang.compose.feed.FeedItemUiState
import com.sarang.torang.compose.feed.data.formatedDate
import org.junit.Assert.assertFalse
import org.junit.Assert.assertTrue
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class FeedUITest {

    @get:Rule
    val composeRules = createAndroidComposeRule<ComponentActivity>()

    private var onComment = false
    private var onFavorite = false
    private var onImage = false
    private var onLike = false
    private var onMenu = false
    private var onName = false

    private var onRestaurant = false
    private var onShare = false
    private var isZooming = false
    private var onLikes = false

    private val contents = "" +
            "contentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontents" +
            "contentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontents" +
            "contentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontents" +
            "contentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontents" +
            "contentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontentscontents" +
            ""

    private val createdDate = "2022-01-01 22:00:00"
    private val likeAmount = 100
    private val rating = 3.5f
    private val userName = "name"

    @Before
    fun init() {
        composeRules.setContent {
            FeedItem(
                uiState = FeedItemUiState(
                    reviewImages = ArrayList<String>().apply {
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                        add("http://sarang628.iptime.org:89/review_images/333/333/2023-06-16/12_52_44_122.jpeg")
                    },
                    feedTopUiState = FeedTopUiState(
                        userName = userName,
                        profilePictureUrl = "1/2023-09-14/10_44_39_302.jpeg",
                        restaurantName = "restaurantName",
                        rating = rating,
                    ),
                    contents = contents,
                    comments = ArrayList<Comment>().apply {
                        add(Comment("author", "comment"))
                    },
                    commentAmount = 0,
                    feedBottomUiState = FeedBottomUiState(
                        isLike = false,
                        isFavorite = false,
                        likeAmount = likeAmount,
                    ),
                    createDate = createdDate
                )
            )
        }
    }

    @Test
    fun displayTest() {
        composeRules.onNodeWithTag("txtName").assertTextEquals(userName)
        composeRules.onNodeWithTag("txtRestaurantName").assertTextEquals("restaurantName")
        //composeRules.onNodeWithTag("txtContents").assertTextContains(summarizedString(nickName = userName, text = contents, 20).text)
        composeRules.onNodeWithTag("txtDate").assertTextEquals(createdDate.formatedDate())
        composeRules.onNodeWithTag("txtLikes")
            .assertTextEquals(composeRules.activity.getString(R.string.like, likeAmount))
    }

    @Test
    fun clickEventTest() {
        assertFalse(onComment)
        composeRules.onNodeWithTag("btnComment").performClick()
        assertTrue(onComment)

        assertFalse(onFavorite)
        composeRules.onNodeWithTag("btnFavorite").performClick()
        assertTrue(onFavorite)

        assertFalse(onImage)
        composeRules.onNodeWithTag("imgReview").performClick()
        assertTrue(onImage)

        assertFalse(onLike)
        composeRules.onNodeWithTag("btnUnLike").performClick()
        assertTrue(onLike)

        assertFalse(onMenu)
        composeRules.onNodeWithTag("btnMenu").performClick()
        assertTrue(onMenu)

        assertFalse(onName)
        composeRules.onNodeWithTag("txtName").performClick()
        assertTrue(onName)

        assertFalse(onRestaurant)
        composeRules.onNodeWithTag("txtRestaurantName").performClick()
        assertTrue(onRestaurant)

        assertFalse(onShare)
        composeRules.onNodeWithTag("btnShare").performClick()
        assertTrue(onShare)

        assertFalse(onLikes)
        composeRules.onNodeWithTag("txtLikes").performClick()
        assertTrue(onLikes)
    }

}